@@ -1,3 +1,12 @@
+trepan 0.6.3 2015-12-27 - Late Christmas
+
+- deparses (e.g. importlib._bootstrap) via uncompyle6 package
+- add "info code" command to show Python code properties
+- add "assert" to "eval?" command
+- add "trepan.api.debug(start_opts={'startup-profile': True})" to get your
+  startup profile sourced
+- Allow a frame object instead of a frame number in "frame" command
+
 trepan 0.6.1 2015-12-10 - Dr Gecko
 
 - add gdb-like "clear" command
